src/objects/TR1__Kanban_Card_Action_Button_Config__mdt.object
<CustomObject>
    <description>The different buttons and their configurational details that will be displayed on the Card Header.</description>
    <fields>
        <fullName>TR1__Button_Color__c</fullName>
        <description>The Hexadecimal Code of the Color that will be used as the Background for the button.</description>
        <inlineHelpText>The Hexadecimal Code of the Color that will be used as the Background for the button.</inlineHelpText>
        <label>Button Color</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Button_Icon_URL__c</fullName>
        <description>The icon that needs to be displayed on the button. This will preferably be a link(relative url) to a Static Resource.</description>
        <inlineHelpText>The icon that needs to be displayed on the button. This will preferably be a link(relative url) to a Static Resource.</inlineHelpText>
        <label>Button Icon URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>TR1__Display_Order__c</fullName>
        <description>The Order on which the Buttons will be displayed on the Card Header.</description>
        <inlineHelpText>The Order on which the Buttons will be displayed on the Card Header.</inlineHelpText>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TR1__Quick_Action_to_Execute__c</fullName>
        <description>The URL to the VF Page that needs to be opened when clicked.</description>
        <inlineHelpText>The URL to the VF Page that needs to be opened when clicked.</inlineHelpText>
        <label>Quick Action to Execute</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Visibility_Expr__c</fullName>
        <description>JS Code that will return the literal &quot;show&quot; or &quot;hide&quot; after any evaluation.</description>
        <inlineHelpText>JS Code that will return the literal &quot;show&quot; or &quot;hide&quot; after any evaluation.</inlineHelpText>
        <label>Visibility Expression</label>
        <type>TextArea</type>
    </fields>
    <label>Kanban Card Action Button Config</label>
    <pluralLabel>Kanban Card Action Button Configurations</pluralLabel>
</CustomObject>